Archive2/a2/82467e6f16f745/output
main.cpp: In function 'int main()':
main.cpp:18:8: error: assignment of read-only location '*(const_pointer_to_const_int)p'
     *p = 89 ; // *** error: p points to const
        ^
main.cpp:19:7: error: assignment of read-only variable 'p'
     p = nullptr ; // *** error: p is const
       ^
